; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_esp.c_program_isa_dma.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_esp.c_program_isa_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i64, i32)* @program_isa_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @program_isa_dma(i32 %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = call i64 (...) @claim_dma_lock()
  store i64 %10, i64* %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @disable_dma(i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @clear_dma_ff(i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @set_dma_mode(i32 %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @set_dma_addr(i32 %18, i64 %19)
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @set_dma_count(i32 %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @enable_dma(i32 %24)
  %26 = load i64, i64* %9, align 8
  %27 = call i32 @release_dma_lock(i64 %26)
  ret void
}

declare dso_local i64 @claim_dma_lock(...) #1

declare dso_local i32 @disable_dma(i32) #1

declare dso_local i32 @clear_dma_ff(i32) #1

declare dso_local i32 @set_dma_mode(i32, i32) #1

declare dso_local i32 @set_dma_addr(i32, i64) #1

declare dso_local i32 @set_dma_count(i32, i32) #1

declare dso_local i32 @enable_dma(i32) #1

declare dso_local i32 @release_dma_lock(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
